<resources>
    <string name="app_name">ToDoApplication</string>
    <string name="add_name">Add Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name_list">Name list</string>
    <string name="preference">preference</string>
    <string name="space" />
    <string name="kama">,</string>
    <string name="project_id">project_id</string>
    <string name="project_name">Project name</string>
    <string name="limit">X/Y</string>
    <string name="add">Add</string>
    <string name="search_name">Search Name</string>
    <string name="project">Project</string>
    <string name="enter_the_items">Enter the items</string>
    <string name="add_list">Add List</string>
    <string name="todo_application">Todo application</string>
    <string name="todo_list">Todo List</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="title">Title</string>
    <string name="Title">title</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="name">Name</string>
    <string name="s">S</string>
    <string name="user_title">User Title</string>
    <string name="user">User</string>
    <string name="user_id">User Id</string>
    <string name="enter_the_project">Enter the project</string>
    <string name="project_list">Project List</string>
    <string name="navigation_view">Navigation View</string>
    <string name="edit">Edit</string>
    <string name="search_view">Search View</string>
    <string name="exist_name">Exist Name</string>
    <string name="exist_title">Exist Title</string>
    <string name="settingview">SettingView</string>
    <string name="font_family">Font Family</string>
    <string name="font_size">Font Size</string>
    <string name="default_color">Default Colour</string>
    <string name="logo">Logo</string>
    <string name="greetings">Greetings</string>
    <string name="creating_your_account">Creating Your Account!</string>
    <string name="email">Email</string>
    <string name="Email">email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_user_account">Don\'t have user account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string-array name="filter_options">
        <item>All</item>
        <item>Completed</item>
        <item>Not Completed</item>
    </string-array>

    <string-array name="page_filter">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="font_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="font_style">
        <item>akaya</item>
        <item>akronim</item>
        <item>alegreya</item>
        <item>antic</item>
        <item>arbutus</item>
    </string-array>
    <string-array name="font_colour">
        <item>gray</item>
        <item>violet</item>
        <item>blue</item>
        <item>green</item>
    </string-array>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="user_email">User Email</string>
    <string name="invalid_details">Invalid Details</string>
    <string name="field_fill">Field Fill</string>
    <string name="sign_in_successfully">Sign In Successfully</string>
    <string name="fail">Fail</string>
    <string name="account">Account Created Successfully</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="fields_fill">Fields fill</string>
    <string name="password_update">Password Update</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="user_profile">User Profile</string>
    <string name="format">Format</string>
    <string name="md5">MD5</string>
    <string name="hint">Hint</string>
    <string name="request_failed_s">Request Failed : %s</string>
    <string name="password_updated">Password Updated</string>
    <string name="new_hint">New Hint</string>
    <string name="old_hint">Old Hint</string>
    <string name="project_created">Project Created</string>
    <string name="data">data</string>
    <string name="font_name">font_family</string>
    <string name="size">font_size</string>
    <string name="font_color">color</string>
    <string name="token">token</string>
    <string name="description">description</string>
    <string name="id">_id</string>
    <string name="Name">name</string>
    <string name="removed_project">Removed Project</string>
    <string name="Description">Description</string>
    <string name="base_url">http://192.168.1.254:8080/</string>
    <string name="todo_item_created">Todo item created</string>
    <string name="sort_order">sort_order</string>
    <string name="additional_attributes">additional_attributes</string>
    <string name="created_by">created_by</string>
    <string name="update_successfully">Update Successfully</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not Completed</string>
    <string name="status">Status</string>
</resources>