<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    tools:context=".NavigationActivity">

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="285dp"
            android:layout_height="160dp"
            android:background="@color/cardview_shadow_start_color">

            <RelativeLayout
                android:id="@+id/profileView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/backToMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_back" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signOut"
                    android:src="@drawable/logout"
                    android:layout_marginStart="220dp"/>

                <TextView
                    android:id="@+id/profileIcon"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background"
                    android:text="@string/s"
                    android:gravity="center"
                    android:textSize="35sp"
                    android:layout_marginTop="40dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:layout_toEndOf="@id/profileIcon"
                    android:layout_marginTop="45dp"
                    android:layout_marginStart="10dp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/userTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_title"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_below="@id/userName"
                    android:layout_toEndOf="@id/profileIcon"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"/>

                <ImageButton
                    android:id="@+id/editIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/edit"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit" />

            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="285dp"
            android:layout_height="25dp"
            android:background="@color/white">

            <TextView
                android:layout_width="285dp"
                android:layout_height="match_parent"
                android:text="@string/project_list"
                android:textSize="22sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="285dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/addlist"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:text="@string/add_list"
                android:textSize="20sp"
                android:backgroundTint="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/add_box"/>

            <LinearLayout
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white">

                <EditText
                    android:id="@+id/projectList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_the_project"
                    android:autofillHints=""
                    android:inputType="text"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/addProject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:backgroundTint="@color/black"
                    android:visibility="gone"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nameListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@android:color/darker_gray"
                    android:dividerHeight="1dp" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
