<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/subList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@color/gray">

            <ImageView
                android:id="@+id/backButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/backButton1"
                android:layout_marginStart="10dp"/>
            <ImageView
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_box"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="5dp"
                android:layout_marginStart="300dp"/>

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="352dp"
                android:layout_marginTop="8dp"
                android:contextClickable="true"
                android:src="@drawable/search"
                android:contentDescription="@string/search" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_the_items"
                android:autofillHints=""
                android:inputType="text"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:backgroundTint="@color/black"
                android:visibility="gone"/>
            <Spinner
                android:id="@+id/filter"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:layout_gravity="top"
            android:layout_marginTop="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/pagination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/gray">

            <ImageView
                android:id="@+id/prev_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/back"/>

            <TextView
                android:id="@+id/pageCount"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="130dp"
                android:layout_toStartOf="@+id/next_page"
                android:text="@string/limit"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/next_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/arrow_right"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/next"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>