<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity"
    android:id="@+id/settingsView"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageButton
        android:id="@+id/backMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/arrow_back"
        android:contentDescription="@string/back" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/fontFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_family"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"/>
    <Spinner
        android:id="@+id/fontStyle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:entries="@array/font_style"
        android:layout_marginTop="25dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"/>
    <Spinner
        android:id="@+id/fontSize"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_color"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"/>
    <Spinner
        android:id="@+id/colour"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"/>
    </RelativeLayout>

</LinearLayout>